--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 triple_store-*.tar
 
-# Temporary files, for example, from tests.
+# Temporary files and sample data
 /tmp/
 
 # Rust/Cargo build artifacts
@@ -49,3 +49,4 @@ OPTIONS-*
 # OS
 .DS_Store
 Thumbs.db
+
